{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 404,
  "lineage": "088f6248-9ca0-5526-5070-bc1802201c4a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pica_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056544cc2e802f149",
            "association_id": "eipassoc-03544b342f3e0e445",
            "domain": "vpc",
            "id": "eipalloc-056544cc2e802f149",
            "instance": "i-076134c44624fba1b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04e56ecbd34d2016c",
            "private_dns": "ip-172-31-5-185.ec2.internal",
            "private_ip": "172.31.5.185",
            "public_dns": "ec2-34-206-47-25.compute-1.amazonaws.com",
            "public_ip": "34.206.47.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.pica_instance_ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pica_instance_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c13eab67c5d8861",
            "arn": "arn:aws:ec2:us-east-1:289333746714:instance/i-076134c44624fba1b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-076134c44624fba1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04e56ecbd34d2016c",
            "private_dns": "ip-172-31-5-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.5.185",
            "public_dns": "ec2-34-206-47-25.compute-1.amazonaws.com",
            "public_ip": "34.206.47.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-056c1ebf2582ebd44",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ebff64db82976fe3",
            "tags": {
              "Name": "pica-intance"
            },
            "tags_all": {
              "Name": "pica-intance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a19b78f4082b4c1d"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pica_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289333746714:internet-gateway/igw-001b2d2e04ac44c82",
            "id": "igw-001b2d2e04ac44c82",
            "owner_id": "289333746714",
            "tags": {
              "Name": "pica-igw"
            },
            "tags_all": {
              "Name": "pica-igw"
            },
            "vpc_id": "vpc-00b7a81533336a47d"
          },
          "dependencies": [
            "aws_vpc.pica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pica_internet_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-001b2d2e04ac44c82",
            "id": "r-rtb-0c7058394e040ddf61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c7058394e040ddf6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pica_igw",
            "aws_route_table.pica_table_route",
            "aws_vpc.pica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pica_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289333746714:route-table/rtb-0397f64306e5393be",
            "id": "rtb-0397f64306e5393be",
            "owner_id": "289333746714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ccf358fb86e36699",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00b7a81533336a47d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pica_table_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289333746714:route-table/rtb-0c7058394e040ddf6",
            "id": "rtb-0c7058394e040ddf6",
            "owner_id": "289333746714",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001b2d2e04ac44c82",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00b7a81533336a47d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pica_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a241bdbba857184",
            "route_table_id": "rtb-0397f64306e5393be",
            "subnet_id": "subnet-0ae7157612fa3c3c0"
          },
          "dependencies": [
            "aws_route_table.pica_private_route_table",
            "aws_subnet.pica_subnet_private",
            "aws_vpc.pica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd04cc3f7d2351f3",
            "route_table_id": "rtb-0c7058394e040ddf6",
            "subnet_id": "subnet-00993f4a9540393ae"
          },
          "dependencies": [
            "aws_route_table.pica_table_route",
            "aws_subnet.pica_public",
            "aws_vpc.pica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pica_lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289333746714:security-group/sg-041b6e3c2384eaff1",
            "description": "Security group for Lambda in public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041b6e3c2384eaff1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pica-lambda-sg",
            "name_prefix": "",
            "owner_id": "289333746714",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00b7a81533336a47d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pica_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289333746714:subnet/subnet-00993f4a9540393ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00993f4a9540393ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "289333746714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pica_public"
            },
            "tags_all": {
              "Name": "pica_public"
            },
            "vpc_id": "vpc-00b7a81533336a47d"
          },
          "dependencies": [
            "aws_vpc.pica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pica_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289333746714:subnet/subnet-0ae7157612fa3c3c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae7157612fa3c3c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "289333746714",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pica-subnet-private"
            },
            "tags_all": {
              "Name": "pica-subnet-private"
            },
            "vpc_id": "vpc-00b7a81533336a47d"
          },
          "dependencies": [
            "aws_vpc.pica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:289333746714:vpc/vpc-00b7a81533336a47d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d11e30832af27461",
            "default_route_table_id": "rtb-04ed8dc21824fceeb",
            "default_security_group_id": "sg-0574de1ba005ddd3c",
            "dhcp_options_id": "dopt-00d951676d4d0bab1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b7a81533336a47d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ed8dc21824fceeb",
            "owner_id": "289333746714",
            "tags": {
              "Name": "pica-vpc"
            },
            "tags_all": {
              "Name": "pica-vpc"
            }
          }
        }
      ]
    }
  ]
}